kubernetes/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/marcelfrey29/iu-docc-project-container-orchestration-backend:14813315711
          resources:
            requests:
              memory: "64Mi"
              cpu: "256m"
            limits:
              memory: "128Mi"
              cpu: "512m"
          ports:
            - containerPort: 3000
              name: backend-port
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
      imagePullSecrets:
        - name: ghcr-pull-secret
    containers:
      - image: ghcr.io/marcelfrey29/iu-docc-project-container-orchestration-backend:14865753196
