kubernetes/base/dynamodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dynamodb
  labels:
    app: dynamodb
spec:
  selector:
    app: dynamodb
  ports:
    - protocol: TCP
      port: 8003
      targetPort: dynamodb-port
  type: LoadBalancer
