kubernetes/base/web-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app
  labels:
    app: web-app
spec:
  selector:
    app: web-app
  ports:
    - protocol: TCP
      port: 8001
      targetPort: web-app-port
  type: LoadBalancer
