kubernetes/base/web-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app
  labels:
    name: web-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: travel-guides.localhost
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web-app
                port:
                  number: 8001
